[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "vqvae"
description = "A project that does nothing so far"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
    "flax>=0.8.5",
    "optax>=0.2.3",
    "ml_collections>=0.1.1",
    "tfp-nightly[jax]>=0.25.0.dev20240819",
    "einops>=0.8.0",
    "dm-haiku>=0.0.12",
    "tensorflow>=2.17.0",
    "tensorflow-datasets>=4.9.6",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["vqvae"]

[tool.setuptools.dynamic]
version = {attr = "vqvae.__init__.__version__"}

[tool.rye]
managed = true
dev-dependencies = [
    "wandb>=0.17.7",
    "matplotlib>=3.9.2",
    "pre-commit>=3.8.0",
]

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S301", "PLR0913", "S101", "PLR2004", "S603", "S607"]
